Empacota a aplicação em containers
Subir o sistema exigia JDK, Maven e Node instalados na versão certa, mais
dois terminais em ordem. Passa a ser `docker compose up --build`, com o
frontend em :3000 e o backend em :8080.

Duas correções foram pré-requisito, e não acessórios:

O CORS estava hardcoded no SecurityConfig — inclusive com um host de
sandbox de terceiro esquecido na lista — apesar de o application.yml
afirmar que essa classe lia app.cors.allowed-origins. Só o WebSocketConfig
lia. Fora de localhost:3000 o navegador bloquearia todas as chamadas, então
containers ou deploy simplesmente não funcionariam.

E a propriedade era uma lista YAML, que vira allowed-origins[0], [1]; o
placeholder ${app.cors.allowed-origins} de um @Value não resolve isso, então
o WebSocketConfig também caía sempre no default embutido. Virou string
separada por vírgula, sobrescrevível por APP_CORS_ALLOWED_ORIGINS.

Sobre os arquivos:

- Backend: build multi-stage, imagem final só com JRE, usuário não-root, e
  /app/data como ponto de montagem do volume — é onde o H2 grava, então sem
  o volume os dados morreriam com o container mesmo com DDL_AUTO=update.
- Frontend: build com Vite e nginx servindo o resultado. A URL da API entra
  como build-arg porque o Vite resolve import.meta.env no build; passá-la
  como variável do container não teria efeito. O nginx.conf tem o fallback
  para index.html, sem o qual recarregar /login devolveria 404.
- O .gitignore do front vinha de um template que ignorava **/Dockerfile* e
  **/.dockerignore, justamente os arquivos que precisam ser versionados para
  um clone novo subir. Adicionadas exceções.

Verificado com a aplicação rodando: /v3/api-docs responde 200 sem token
(é o healthcheck), a origem configurada é aceita e uma origem estranha
recebe 403, e APP_CORS_ALLOWED_ORIGINS de fato substitui o default — que é
o mecanismo de que o compose depende. `docker compose config` valida.
47 testes passando.

NÃO verificado: `docker compose up` de ponta a ponta.